# conduit

./: .env.example  .gitignore  DEMO.md  MENTOR.md  README.md  pyproject.toml
bitrefill_agent/: __init__.py  agent.py  catalog.py  client.py  demo_live.py  esim.py  extras.py  mcp_compare.py  purchase.py  tools.py
bitrefill_agent/planner/: __init__.py  converse.py  demo.py  fund.py  plan.py  profile.py  safety.py
bitrefill_agent/router/: __init__.py  discover.py  engine.py  execute.py  intent.py  llm.py  optimize.py  policy.py
data/: mock_finances.json  mock_health.json
docs/: snapshot-aspire.html  snapshot.html
web/: app.py
web/static/: app.html  landing.html  planner.html
