[project]
name = "bitrefill-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.2",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "mcp>=1.28.0",
    "openai>=2.42.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
